--- a/src/sass/layout/_zoom.scss
+++ b/src/sass/layout/_zoom.scss
@@ -96,7 +96,7 @@
   text-align: center;
   top: 0;
   left: 0;
-  background-color: $color-black;
+  background-color: transparentize($color: $color-black, $amount: .3);
 }
 
 .zoom-mobile {
@@ -191,10 +191,10 @@
         padding-bottom: 100px;
       }
       &__img {
-        background-size: cover;
         position: relative;
+        background-size: cover;
+        background-position: 100% 100%;
         height: 300px;
-        object-fit: cover;
         margin: -20px -20px 0;
         &.faucon {
           background-image: url('https://via.placeholder.com/1300x732');
